--- a/fast-manip.tex
+++ b/fast-manip.tex
@@ -435,10 +435,10 @@ to make it super fast.
 \node[circle,fill=black,inner sep=2] (xd1) at (5.9,0.3) {};
 \node[circle,fill=black,inner sep=2] (xd2) at (6.0,-1.1) {};
 \node[circle,fill=black,inner sep=2] (xend) at (9,0) {};
-\node[above=0.1cm of xstart] {$x_{start}$};
-\node[above=0.1cm of Xgrasp] {$X_{grasp}$};
-\node[above=0.1cm of Xdrop] {$X_{drop}$};
-\node[above=0.1cm of xend] {$x_{end}$};
+\node[above=0.1cm of xstart] {$x_{\mbox{\scriptsize start}}$};
+\node[above=0cm of Xgrasp] {$X_{\mbox{\scriptsize grasp}}$};
+\node[above=0cm of Xdrop] {$X_{\mbox{\scriptsize drop}}$};
+\node[above=0.1cm of xend] {$x_{\mbox{\scriptsize end}}$};
 
 \draw[line width=1.5mm,white]
    (xstart)
@@ -591,13 +591,156 @@ hypothesizing worlds.
 
 
 \newpage
-\chapter{Problem Description and Approach}
+\chapter{Sub-Problems in Manipulation Planning}
 \label{chap:formulation}
 
 In this chapter,
 we lay out the structure of the manipulation planning problem.
 
 \section{Sub-Problem Structure}
+
+\begin{figure}
+\begin{widepage}
+\begin{center}
+\begin{tikzpicture}
+\tikzset{>=latex} % arrow heads
+
+% top: symbolic planner
+\node[draw,ellipse,align=center] (high) at (0,0)
+   {High-Level\\Task Planner};
+\node[draw,circle,align=center,inner sep=0,minimum size=1.9cm] (step1) at (-4,-2)
+   {Step 1:\\Transit to\\[-0.04in]grasp};
+\node[draw,circle,align=center,inner sep=0,minimum size=1.9cm] (step2) at (0,-2)
+   {Step 2:\\Transfer to\\[-0.04in]drop};
+\node[draw,circle,align=center,inner sep=0,minimum size=1.9cm] (step3) at (4,-2)
+   {Step 3:\\Transit to\\[-0.04in]home};
+\draw[->] (high) -> (step1);
+\draw[->] (high) -> (step2);
+\draw[->] (high) -> (step3);
+
+% middle: c-space sequence
+% valid subsets
+\node[draw,black,rounded corners,
+   minimum height=2.3cm,minimum width=4.5cm]
+   (X1) at (-3.5,-4.75) {};
+\node[draw,black,rounded corners,
+   minimum height=2.6cm,minimum width=5.5cm]
+   (X2) at (0,-4.75) {};
+\node[draw,black,rounded corners,
+   minimum height=2.3cm,minimum width=5.5cm]
+   (X3) at ( 4,-4.75) {};
+% root sets
+\node[draw,black,rounded corners,
+   minimum height=2cm,minimum width=1.2cm]
+   (Xgrasp) at (-2,-4.75) {};
+\node[draw,black,rounded corners,
+   minimum height=2cm,minimum width=1.2cm]
+   (Xdrop) at (2,-4.75) {};
+\node[draw,black,rounded corners,
+   minimum height=2cm,minimum width=1.2cm]
+   (Xend) at (6,-4.75) {};
+% set labels
+\node[above=-0.6cm of Xgrasp] {$X_{\mbox{\scriptsize grasp}}$};
+\node[above=-0.6cm of Xdrop] {$X_{\mbox{\scriptsize drop}}$};
+\node[above=-0.6cm of Xend] {$X_{\mbox{\scriptsize end}}$};
+\node[above left=-0.6cm and -2.1cm of X1] {$X_1$};
+\node[above=-0.75cm of X2] {$X_2$};
+\node[above=-0.6cm of X3] {$X_3$};
+% nodes and paths
+\node[circle,fill=black,inner sep=2] (xstart) at (-5,-4.9) {};
+\node[circle,fill=black!50,inner sep=2] (xg1) at (-1.9,-4.6) {};
+\node[circle,fill=black,inner sep=2] (xg2) at (-2.1,-5.3) {};
+\node[circle,fill=black,inner sep=2] (xd1) at ( 1.9,-4.5) {};
+\node[circle,fill=black!50,inner sep=2] (xd2) at ( 2.1,-5.0) {};
+\node[circle,fill=black!50,inner sep=2] (xd3) at ( 2.0,-5.4) {};
+\node[circle,fill=black!50,inner sep=2] (xe1) at ( 6.1,-4.7) {};
+\node[circle,fill=black,inner sep=2] (xe2) at ( 5.9,-5.2) {};
+\node[above=0cm of xstart] {$x_{\mbox{\scriptsize start}}$};
+% lines
+\draw[line width=1.5mm,white]
+   (xstart) -- (xg1) (xg1) -- (xd1) (xg1) -- (xd2) (xg1) -- (xd3)
+   (xg2) -- (xd2) (xg2) -- (xd3) (xd1) -- (xe1) (xd2) -- (xe1)
+   (xd2) -- (xe2) (xd3) -- (xe1) (xd3) -- (xe2);
+\draw[draw=black!50]
+   (xstart) -- (xg1) (xg1) -- (xd1) (xg1) -- (xd2) (xg1) -- (xd3)
+   (xg2) -- (xd2) (xg2) -- (xd3) (xd1) -- (xe1) (xd2) -- (xe1)
+   (xd2) -- (xe2) (xd3) -- (xe1) (xd3) -- (xe2);
+\draw[line width=1.5mm,white]
+   (xstart) -- (xg2) (xg2) -- (xd1) (xd1) -- (xe2);
+\draw
+   (xstart) -- (xg2) (xg2) -- (xd1) (xd1) -- (xe2);
+% grey sets (overlay)
+\node[fill=black,opacity=0.1,rounded corners,
+   minimum height=2cm,minimum width=1.2cm]
+   at (-2,-4.75) {};
+\node[fill=black,opacity=0.1,rounded corners,
+   minimum height=2cm,minimum width=1.2cm]
+   at (2,-4.75) {};
+\node[fill=black,opacity=0.1,rounded corners,
+   minimum height=2cm,minimum width=1.2cm]
+   at (6,-4.75) {};
+% question mark bubbles
+\node[circle,fill=white,fill opacity=0.9,inner sep=7pt]
+   at (-3.75,-4.9) {\LARGE ?};
+\node[circle,fill=white,fill opacity=0.9,inner sep=7pt]
+   at (0,-4.9) {\LARGE ?};
+\node[circle,fill=white,fill opacity=0.9,inner sep=7pt]
+   at (4.0,-4.9) {\LARGE ?};
+
+% bottom: individual planner instances
+\node[draw,black,rounded corners,
+   minimum height=2cm,minimum width=3.5cm]
+   (sm1) at (-4.2,-7.75) {};
+\node[draw,black,rounded corners,
+   minimum height=1.7cm,minimum width=0.8cm,
+   right=-1cm of sm1] {};
+\node[circle,fill=black!50,inner sep=2] (sm1xstart) at (-5.4,-7.75) {};
+\node[circle,fill=black!50,inner sep=2] (sm1xg1) at (-2.9,-7.5) {};
+\node[circle,fill=black!50,inner sep=2] (sm1xg2) at (-3.1,-8.1) {};
+\draw[draw=black!50]
+   (sm1xstart) -- (sm1xg1) (sm1xstart) -- (sm1xg2);
+
+\node[draw,black,rounded corners,
+   minimum height=2cm,minimum width=3.5cm]
+   (sm2) at (0.5,-7.75) {};
+\node[draw,black,rounded corners,
+   minimum height=1.7cm,minimum width=0.8cm,
+   left=-1cm of sm2] {};
+\node[draw,black,rounded corners,
+   minimum height=1.7cm,minimum width=0.8cm,
+   right=-1cm of sm2] {};
+\node[circle,fill=black!50,inner sep=2] (sm2xg1) at (-0.6,-7.5) {};
+\node[circle,fill=black!50,inner sep=2] (sm2xg2) at (-0.8,-8.1) {};
+\node[circle,fill=black!50,inner sep=2] (sm2xd1) at ( 1.6,-7.4) {};
+\node[circle,fill=black!50,inner sep=2] (sm2xd2) at ( 1.8,-7.9) {};
+\node[circle,fill=black!50,inner sep=2] (sm2xd3) at ( 1.7,-8.3) {};
+\draw[draw=black!50]
+   (sm2xg1) -- (sm2xd1) (sm2xg1) -- (sm2xd2) (sm2xg1) -- (sm2xd3)
+   (sm2xg2) -- (sm2xd1) (sm2xg2) -- (sm2xd2) (sm2xg2) -- (sm2xd3);
+
+\node[draw,black,rounded corners,
+   minimum height=2cm,minimum width=3.5cm]
+   (sm3) at ( 5.2,-7.75) {};
+\node[draw,black,rounded corners,
+   minimum height=1.7cm,minimum width=0.8cm,
+   left=-1cm of sm3] {};
+\node[draw,black,rounded corners,
+   minimum height=1.7cm,minimum width=0.8cm,
+   right=-1cm of sm3] {};
+\node[circle,fill=black!50,inner sep=2] (sm3xd1) at ( 4.0,-7.4) {};
+\node[circle,fill=black!50,inner sep=2] (sm3xd2) at ( 4.2,-7.9) {};
+\node[circle,fill=black!50,inner sep=2] (sm3xd3) at ( 4.1,-8.3) {};
+\node[circle,fill=black!50,inner sep=2] (sm3xe1) at ( 6.4,-7.6) {};
+\node[circle,fill=black!50,inner sep=2] (sm3xe2) at ( 6.2,-8.1) {};
+\draw[draw=black!50]
+   (sm3xd1) -- (sm3xe1) (sm3xd1) -- (sm3xe2) (sm3xd2) -- (sm3xe1)
+   (sm3xd2) -- (sm3xe2) (sm3xd3) -- (sm3xe1) (sm3xd3) -- (sm3xe2);
+
+\end{tikzpicture}
+\end{center}
+\caption{This is a caption.}
+\end{widepage}
+\end{figure}
 
 Show that figure again.
 
@@ -1416,7 +1559,7 @@ from Section~\ref{subsec:problem-definition},
 guided by the cost model from Section~\ref{subsec:cost-model}
 to minimize total task cost.
 
-The Multi-Set PRM is \emph{multi-query},
+The Greedy PRM is \emph{multi-query},
 in that the same graph
 structure $G$ is maintained within the configuration space
 $\mathcal{C}$.
@@ -1754,6 +1897,9 @@ with a graduated cost model
 to approximate a probabalistic model
 of the $\mathcal{C}$-space.
 Probabalistic vs lattice-based graphs.
+
+Also talk here about the fancy Lazy PRM path bisection
+evaluation function.
 
 
 \newpage
