--- a/fast-manip.tex
+++ b/fast-manip.tex
@@ -6,7 +6,7 @@
 
 % include \paragraph as numbered
 \setcounter{secnumdepth}{3}
-\setcounter{tocdepth}{3}
+\setcounter{tocdepth}{2} % 3
 
 \usepackage[bookmarks=true]{hyperref}
 
@@ -69,7 +69,8 @@
     \addtolength{\textwidth}{2\offsetpage}}%
 {\end{adjustwidth}}
 
-\title{Fast Manipulation\\Task Planning}
+\title{Efficient Manipulation Task Planning\\
+   via Reuse-Informed Planning Cost Optimization}
 \author{Christopher M. Dellin}
 \date{\today}
 
@@ -510,7 +511,8 @@ to make it super fast.
 \node[anchor=west] at (0.4, 0.16) {Our Approach};
 \node[anchor=west] at (0.4,-0.2) {enables partial reuse};
 \node[anchor=west] at (0.3,-1.64) {Multi-Query Planners};
-\node[anchor=west] at (0.3,-2.0) {require constant $\mathcal{C}_{free}$};
+\node[anchor=west] at (0.3,-2.0) {require constant
+   $\mathcal{C}_{\mbox{\scriptsize free}}$};
 \end{tikzpicture}
       \end{center}
       \caption{Single vs. Multi Query Planners}
@@ -596,6 +598,9 @@ hypothesizing worlds.
 
 In this chapter,
 we lay out the structure of the manipulation planning problem.
+
+Definitely reference DRC Trials paper for planning vs. execution
+time breakdown!
 
 \section{Sub-Problem Structure}
 
@@ -811,11 +816,15 @@ we lay out the structure of the manipulation planning problem.
 
 \end{center}
 \caption{Diagram of multi-step planning framework.}
+\label{fig:diagram-multi-step}
 \end{widepage}
 \end{figure}
 }
 
-Show that figure again.
+The manipulation problem has a particular structure,
+which we discuss here.
+See Figure~\ref{fig:diagram-multi-step}
+for a diagram.
 
 Briefly discuss the higher-level planner.
 Not doing research here -- just need something that specifies
@@ -827,29 +836,115 @@ will only discuss seqential sub-plans,
 but an intelligent meta-planner
 can do non-sequential stuff too.
 
+\section{Motivation: DRC Trials}
+
+Talk a lot about the DRC approach.
+It was slow, and it got stuck!
+
+Copy-paste in from the ISER paper!
+
+\section{Approach}
+
 Multi-step problem structure (lots of options at each step);
 decomposition into a bunch of "local planner" like things.
 We're essentially building a meta-graph.
-Dont't get stuck.
+Don't get stuck.
 
-\section{Root Sampling}
+We talk a lot about the mapping
+from continuous spaces to graphs in
+Chapter~\ref{chap:graphs-in-continuous}.
+
+Talk about subgoals in A* literature.
+
+For now, assume a prescribed order,
+but we'll talk later about more complex meta-planning
+approaches.
+
+\subsection{Root Sampling}
 
 Do sampling at this higher level.
 (Can't rely on the sub-planners to generate their own starts/goals --
 they must be synchronized.)
 Potential research question: learn good intermediate goals.
 
-\section{Two Ways to Make it Fast}
+\subsection{Two Ways to Make it Fast}
 
 The proposal is split into two complementary things,
 guided by how slow collision checking is.
 
-Chapters 2,3 focus WITHIN each step.
+Chapters 3,4 focus WITHIN each step.
 Make each step fast.
 
-Chapters 4,5 focus BETWEEN steps.
+Chapters 5,6 focus BETWEEN steps.
 Exploit structure between steps (Chapter~\ref{chap:multi-set}).
 Single-query vs. multi-query.
+
+\section{Related Work}
+
+While we will primarily apply graph search techniques to this problem,
+we start by reviewing alternative approaches.
+
+\section{Review of Alternative Approaches}
+\label{sec:related-work}
+
+Since $C$ is continuous,
+all approaches must introduce some sort of discretization
+in order to compute solutions.
+We choose to build a graph consisting of vertices and edges in $C$,
+and then search that graph (Section~\ref{sec:best-first}).
+We do this because we can rely on existing techniques,
+and because an explicit graph can be more easily reused than other
+approaches.
+In this section, we discuss alternative approaches to solving
+the motion planning problem for articulated robots.
+
+%\subsection{Multi-Query Approaches}
+%
+%We could run a PRM \cite{kavrakietal1996prm}.
+%Commit to a fixed graph,
+%and determine the validity of each vertex and edge w.r.t.
+%$\mathcal{C}_{\mbox{\scriptsize free}}$.
+%Then, at query time,
+%run A* to find the shortest path (this is fast due to graph sparseness).
+%This is good because it reuses work.
+%Unfortunately,
+%(a) our $\mathcal{C}_{\mbox{\scriptsize free}}$
+%is different for every subplan
+%(and for different options with each),
+%and (b) we don't want to determine validity over the entire graph
+%because it's costly.
+
+\subsection{Anytime algorithms}
+
+Compare to RRT*, FMT*, BIT*, etc.
+
+\subsection{Other}
+
+Need to look into the SBL planner \cite{sanchezante2001sbl}
+(Single Query BiDirectional Lazy PRM).
+
+\subsection{Incremental Construction Algorithms}
+
+We could construct the graph incrementally and in response to the shape
+of $\mathcal{C}_{\mbox{\scriptsize free}}$.
+RRTs behave well for quickly finding feasible paths.
+We'll compare against them at the end of this chapter.
+Also talk about ESTs.
+Difficult to cache things.
+
+\subsection{Trajectory Optimization}
+
+One approach is trajectory optimization.
+For example, there's CHOMP \cite{zucker2013chomp}
+and TrajOpt \cite{schulman2013trajopt}.
+Lots of other prior work here that is not manipulation-focused.
+
+Local minima problems.
+Difficult to cache / apply to similar problems.
+
+This is largely complementary.
+Use sampling-based planning to quickly find feasible solutions,
+and then optimize them.
 
 \section{Other Stuff}
 
@@ -863,7 +958,7 @@ Other stuff to touch on:
 
 
 \newpage
-\chapter{Quickly Searching Manipulation Graphs}
+\chapter{Quickly Searching Explicit Expensive Graphs}
 \label{chap:inflate}
 
 In order for an articulated robot to perform manipulation tasks
@@ -879,7 +974,7 @@ the articulated motion planning problem as best-first search,
 propose a general planning framework which accounts for these tradeoffs,
 and examine some empirical results.
 
-\paragraph{Two Notions of Efficiency}
+\paragraph{Two Notions of Efficiency.}
 
 Throughout this chapter,
 we reference two different types of efficiency
@@ -919,87 +1014,25 @@ the manipulation problem demands that
 (a) the cost of plans and
 (b) the cost of planning both be considered.
 
-\paragraph{General Problem Characterization}
+\paragraph{General Problem Characterization.}
 
 We are motivated to solve motion planning problems for articulated robots.
 In the simplest version of this problem,
 the robot has a continuous configuration space $C$,
 with some subset $C_{obs}$ in collision.
 All feasible trajectories must then lie entirely in
-$C_{free} = C \setminus C_{obs}$.
-In general, testing some configuration $q$ for membership in $C_{free}$
+$\mathcal{C}_{\mbox{\scriptsize free}} = C \setminus C_{obs}$.
+In general, testing some configuration $q$ for membership in
+$\mathcal{C}_{\mbox{\scriptsize free}}$
 is an expensive operation.
 A typical query asks for a trajectory $t: [0,1] \rightarrow Q$ between
 a start set and a goal set (e.g. $t(0) \in Q_s$ and $t(1) \in Q_g$.
-We defer discussion constraints until Section~\ref{sec:constraints}.
+We defer discussion constraints until later.
 We are focused on configuration spaces without dynamics.
 
 In this chapter,
 we'll primarly focus on single-query things,
 but we'll keep in mind that we want things that can enable reuse eventually.
-
-While we will primarily apply graph search techniques to this problem,
-we start by reviewing alternative approaches.
-
-\section{Review of Alternative Approaches}
-\label{sec:related-work}
-
-Since $C$ is continuous,
-all approaches must introduce some sort of discretization
-in order to compute solutions.
-We choose to build a graph consisting of vertices and edges in $C$,
-and then search that graph (Section~\ref{sec:best-first}).
-We do this because we can rely on existing techniques,
-and because an explicit graph can be more easily reused than other
-approaches.
-In this section, we discuss alternative approaches to solving
-the motion planning problem for articulated robots.
-
-\subsection{Trajectory Optimization}
-
-One approach is trajectory optimization.
-For example, there's CHOMP \cite{zucker2013chomp}
-and TrajOpt \cite{schulman2013trajopt}.
-Lots of other prior work here that is not manipulation-focused.
-
-Local minima problems.
-Difficult to cache / apply to similar problems.
-
-This is largely complementary.
-Use sampling-based planning to quickly find feasible solutions,
-and then optimize them.
-
-\subsection{Incremental Construction Algorithms}
-
-We could construct the graph incrementally and in response to the shape
-of $C_{free}$.
-RRTs behave well for quickly finding feasible paths.
-We'll compare against them at the end of this chapter.
-Also talk about ESTs.
-Difficult to cache things.
-
-%\subsection{Multi-Query Approaches}
-%
-%We could run a PRM \cite{kavrakietal1996prm}.
-%Commit to a fixed graph,
-%and determine the validity of each vertex and edge w.r.t. $C_{free}$.
-%Then, at query time,
-%run A* to find the shortest path (this is fast due to graph sparseness).
-%This is good because it reuses work.
-%Unfortunately,
-%(a) our $C_{free}$ is different for every subplan
-%(and for different options with each),
-%and (b) we don't want to determine validity over the entire graph
-%because it's costly.
-
-\subsection{Anytime algorithms}
-
-Compare to RRT*, FMT*, BIT*, etc.
-
-\subsection{Other}
-
-Need to look into the SBL planner \cite{sanchezante2001sbl}
-(Single Query BiDirectional Lazy PRM).
 
 \section{Best-First Graph Search}
 \label{sec:best-first}
@@ -1036,11 +1069,12 @@ are not necessary.
 Also,
 we are not restricted to only expanding successors of a vertex;
 we can simply make queries of the graph.
-[NOTE: sparsity is not a good word here, since it already has meaning
-for graphs.]
+\cdnote{``Sparsity'' is not a good word here, since it already has meaning
+for graphs.}
 
 \textbf{Expensive Edge Evaluations.}
-Evaluating edge costs (e.g. testing for membership in $C_{free}$)
+Evaluating edge costs (e.g. testing for membership in
+$\mathcal{C}_{\mbox{\scriptsize free}}$)
 is expensive.
 
 See Figure~\ref{fig:seg-intro} for an example.
@@ -1603,7 +1637,8 @@ with the following objective:
    \label{eqn:prop-heuristics}
 \end{equation}
 
-The Greedy PRM applied to a single $C_{free}$ as described in this chapter
+The Greedy PRM applied to a single
+$\mathcal{C}_{\mbox{\scriptsize free}}$ as described in this chapter
 is equivalent to the E-Graph planner
 with $\epsilon=1$ and $\epsilon^E = 1 + \frac{\alpha \lambda}{1-\lambda}$.
 It's not immediately clear to me why one would choose $\epsilon \neq 1$.
@@ -1615,7 +1650,7 @@ It's not immediately clear to me why one would choose $\epsilon \neq 1$.
 The Greedy PRM is the result of applying
 best-first search with the $\lambda$-mediated objective
 (\ref{eqn:general-objective})
-to a simple single-$C_{free}$ problem
+to a simple single-$\mathcal{C}_{\mbox{\scriptsize free}}$ problem
 in batches of $N$ samples.
 Based on empirical results, we also use the bidirectional edge evaluation
 algorithn,
@@ -1833,27 +1868,7 @@ assuming it will be collision-free.
 If we have some estimate of the proportion $P_u$ of evaluated edges
 which will be part of the final path,
 we can then choose a cost function which downweights the planning time.
-I need to work this out. 
-
-\subsection{Choosing Batch Size $N$}
-
-\cdnote{Actuall, I think I should move this to
-Chapter~\ref{chap:graphs-in-continuous}.}
-What graph are we searching over?
-If it's too sparse, we'll stop after knowing that no solution exists.
-If it's too dense, we'll spend too much time filling in parts of
-space.
-There's actually some spatial relationship in $C_{free}$ what we're not
-modeling.
-We get around this with artificial sparseness.
-There's definitely a paper's worth of work here too (Shushman's stuff).
-The easy version is with sequential batches of size $N$.
-Talk about how what we really want to do
-is evaluate the estimate of cost remaining
-\emph{in expectation}.
-
-Talk about how this is complementary to BIT* which acheive speedups
-by batching, not by inflating.
+I need to work this out.
 
 \section{Results}
 
@@ -1937,24 +1952,14 @@ in terms of planning effort required to find a feasible path.
 
 \section{Repeated Queries}
 
-For multiple queries within the same $C_{free}$,
+For multiple queries within the same
+$\mathcal{C}_{\mbox{\scriptsize free}}$,
 the edge evaluations can be used in subsequent searches.
 This ends up behaving similarily to E-graphs \cite{phillips2012egraphs}
 with $\epsilon=1$
 as described in Section~\ref{sec:egraphs},
 with the exception that all evaluated edges are placed in the graph,
 not just the edges on the solution path.
-
-\section{Constraints}
-\label{sec:constraints}
-
-Here I talk about constrained planning.
-
-\section{Future Work}
-
-How to handle the narrow passage problem?
-Lots of literature on that, new sampling strategies, etc.
-(Toggle PRM, for instance.)
 
 
 \newpage
@@ -1963,16 +1968,56 @@ Lots of literature on that, new sampling strategies, etc.
 
 Sweet, sweet chapter about how to best embed explicit graphs
 in continuous configuration spaces.
-Talk about the $N$ parameter.
+
+\section{Types of Graphs}
+
+\begin{itemize}
+\item Probabalistic vs lattice-based graphs.
+\item Probabalistic (pseudo-random) for efficient caching.
+\end{itemize}
+
+\section{Optimization in Expectation}
+
 Extend the Greedy PRM algorith to do things in expectation.
+
+Relate to Evan's work.
+
 Motivate the incremental densification idea,
 with a graduated cost model
 to approximate a probabalistic model
 of the $\mathcal{C}$-space.
-Probabalistic vs lattice-based graphs.
+
+\section{Batching}
+
+Choosing Batch Size $N$.
+
+What graph are we searching over?
+If it's too sparse, we'll stop after knowing that no solution exists.
+If it's too dense, we'll spend too much time filling in parts of
+space.
+There's actually some spatial relationship in
+$\mathcal{C}_{\mbox{\scriptsize free}}$ what we're not
+modeling.
+We get around this with artificial sparseness.
+There's definitely a paper's worth of work here too (Shushman's stuff).
+The easy version is with sequential batches of size $N$.
+Talk about how what we really want to do
+is evaluate the estimate of cost remaining
+\emph{in expectation}.
+
+Talk about how this is complementary to BIT* which acheive speedups
+by batching, not by inflating.
+
+\section{Whole-Path Bisection Testing}
 
 Also talk here about the fancy Lazy PRM path bisection
 evaluation function.
+
+\section{Future Work}
+
+How to handle the narrow passage problem?
+Lots of literature on that, new sampling strategies, etc.
+(Toggle PRM, for instance.)
 
 
 \newpage
@@ -1989,7 +2034,7 @@ In the introduction to this chapter,
 I'll talk about how the multi-step planning problem decomposition
 discussed in Chapter~\ref{chap:formulation}
 consists of a bunch of different queries in different
-$C_{free}$s, but that are related.
+$\mathcal{C}_{\mbox{\scriptsize free}}$s, but that are related.
 
 For example, say you're planning to move an object from an initial
 location to a goal location,
@@ -1997,7 +2042,7 @@ and then move your manipulator back to the start pose.
 See Figure~\ref{fig:manip-example}.
 You have a single grasp for the object,
 and your manipulator has a single IK for the grasp (very simple problem).
-There are three $C_{free}$s here;
+There are three $\mathcal{C}_{\mbox{\scriptsize free}}$s here;
 a naive approach would plan separately in each.
 
 \begin{figure}
@@ -2244,7 +2289,7 @@ See Figure~\ref{fig:multi-set-example} for a simple motivating example.
 \node (a) at (0,0) {woo};
 
 \end{tikzpicture}
-\caption{An example of different $C_{free}$s}
+\caption{An example of different $\mathcal{C}_{\mbox{\scriptsize free}}$s}
 \label{fig:multi-set-example}
 \end{figure}
 
@@ -2291,11 +2336,13 @@ and the Lazy Reconfiguration Forest
 However, these approaches do not reason explicitly about the
 structure of the configuration space.
 
-\subsection{Static vs Dynamic Components of $\mathcal{C}_{free}$}
+\subsection{Static vs Dynamic Components of
+   $\mathcal{C}_{\mbox{\scriptsize free}}$}
 
 Some approaches do take advantage of such structure
 through a two-level dichotomy between
-permanent and non-permanent parts of $\mathcal{C}_{free}$.
+permanent and non-permanent parts of
+$\mathcal{C}_{\mbox{\scriptsize free}}$.
 Leven and Hutchinson \cite{leven2000changing}
 and similar work \cite{kallman2004dynamicroadmaps}
 handle changing environments by
@@ -2539,11 +2586,11 @@ However, unlike related problems in which all
 queries demand solution paths contained within a single common subset of
 $\mathcal{C}$
 (usually the set of collision-free configurations, denoted
-$\mathcal{C}_{free}$),
+$\mathcal{C}_{\mbox{\scriptsize free}}$),
 the multi-set problem allows for the specification of
 \emph{multiple} such $\mathcal{C}$-subsets
 $\mathcal{S} = \{ A, B, \dots \}$.
-Like $\mathcal{C}_{free}$,
+Like $\mathcal{C}_{\mbox{\scriptsize free}}$,
 each member of $\mathcal{S}$
 is a subset of the common configuration space
 (that is,
@@ -2957,7 +3004,8 @@ See Fig.~\ref{fig:self-collision-example}.
 \centering
 \input{figs/broadphase-single}
 \caption{A single-set planner testing simply for membership in
-  $\mathcal{C}_{free}$ treats a collision validity checker as a
+  $\mathcal{C}_{\mbox{\scriptsize free}}$
+  treats a collision validity checker as a
   ``black box.''
   Internally,
   modern checkers first employ an inexpensive broad-phase check
@@ -3394,9 +3442,13 @@ by the algorithm are a function only of their (constant) lengths.
 
 
 \newpage
-\chapter{Conclusion}
+\chapter{Comprehensive Multi-Root Planning}
 
-meta-graph [future work: probabalistic models]
+Copy in that paper too!
+
+
+\newpage
+\chapter{Conclusion}
 
 
 \newpage
