--- a/figs/figstar-a.tex
+++ b/figs/figstar-a.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+%\usetikzlibrary{...}
+\begin{document}
 \begin{tikzpicture}
 
 \draw (0,0) rectangle (5.8,4.9);
@@ -43,3 +47,4 @@
 \draw[->] (p3lab) -- (p3);
 
 \end{tikzpicture}%
+\end{document}
