--- a/figs/query-to-subset-b.tex
+++ b/figs/query-to-subset-b.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+%\usetikzlibrary{...}
+\begin{document}
 \begin{tikzpicture}
 \tikzstyle{every node}=[font=\footnotesize]
 \tikzset{>=latex} % arrow heads
@@ -16,3 +20,4 @@
 \draw[->] (q3.east) -- (c);
 %\draw[step=1,black!10,very thin] (0,-2) grid (4,0);
 \end{tikzpicture}%
+\end{document}
