--- a/figs/relations-inclusion.tex
+++ b/figs/relations-inclusion.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+%\usetikzlibrary{...}
+\begin{document}
 \begin{tikzpicture}
 \draw (0,-2) rectangle (4,0);
 \node (clab) at (0.3,-0.4) {$\mathcal{C}$};
@@ -5,3 +9,4 @@
 \node[draw,circle,ultra thick] at (1.8,-1.2) {$A$};
 \node at (2.3,-0.7) {$B$};
 \end{tikzpicture}%
+\end{document}
