--- a/figs/retroactive-b.tex
+++ b/figs/retroactive-b.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+\usetikzlibrary{calc}
+\begin{document}
 \begin{tikzpicture}
 
 \tikzstyle{every node}=[font=\footnotesize]
@@ -75,3 +79,4 @@
   at (2.4,1.6) {$X_2$};
 
 \end{tikzpicture}%
+\end{document}
