--- a/figs/self-collision.tex
+++ b/figs/self-collision.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+\usetikzlibrary{calc}
+\begin{document}
 \begin{tikzpicture}
 
 \draw (0,0) rectangle (5.8,4.9);
@@ -76,3 +80,4 @@
 \draw[->] (p2lab) -- (p2node);
 
 \end{tikzpicture}%
+\end{document}
