--- a/figs/broadphase-multi.tex
+++ b/figs/broadphase-multi.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+\usetikzlibrary{positioning,shapes}
+\begin{document}
 \begin{tikzpicture}
 
 \tikzstyle{every node}=[font=\footnotesize]
@@ -69,3 +73,4 @@
 %\draw[step=1,black!10,very thin] (0,-4) grid (8,0);
 
 \end{tikzpicture}%
+\end{document}
