--- a/figs/example-2d-h.tex
+++ b/figs/example-2d-h.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+%\usetikzlibrary{...}
+\begin{document}
 \begin{tikzpicture}
 
 \draw (0,0) rectangle (5.8,2);
@@ -48,3 +52,4 @@
 \node[inner sep=0] at (0,2.1) {};
 
 \end{tikzpicture}%
+\end{document}
