--- a/figs/figstar-b.tex
+++ b/figs/figstar-b.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+\usetikzlibrary{calc}
+\begin{document}
 \begin{tikzpicture}
 
 \draw (0,0) rectangle (5.8,4.9);
@@ -56,3 +60,4 @@
   (p1) (1.7,3.2) (2.1,3.4) (2.5,3.5) (3.3,2.9) (3.5,2.3) (p2)};
 
 \end{tikzpicture}%
+\end{document}
