--- a/figs/figstar-c.tex
+++ b/figs/figstar-c.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+\usetikzlibrary{calc}
+\begin{document}
 \begin{tikzpicture}
 
 \draw (0,0) rectangle (5.8,4.9);
@@ -59,3 +63,4 @@
 \end{scope}
 
 \end{tikzpicture}%
+\end{document}
