--- a/figs/relations-intersection.tex
+++ b/figs/relations-intersection.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+%\usetikzlibrary{...}
+\begin{document}
 \begin{tikzpicture}
 \draw (0,-2) rectangle (4,0);
 \node (clab) at (0.3,-0.4) {$\mathcal{C}$};
@@ -17,3 +21,4 @@
 \node at (1.2,-1.2) {$B$};
 \node at (2.8,-0.8) {$C$};
 \end{tikzpicture}%
+\end{document}
