--- a/figs/retroactive-a.tex
+++ b/figs/retroactive-a.tex
@@ -1,3 +1,7 @@
+\documentclass{standalone}
+\usepackage{tikz}
+\usetikzlibrary{calc}
+\begin{document}
 \begin{tikzpicture}
 
 \tikzstyle{every node}=[font=\footnotesize]
@@ -51,3 +55,4 @@
   at (1.7,1.6) {$X_1$};
 
 \end{tikzpicture}%
+\end{document}
